configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver    
  replicas: 1
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "ivsonv/hello-go:v6"

          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 4
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
            # initialDelaySeconds: 5

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000   # port to container

            periodSeconds: 5
            failureThreshold: 3 #count ports to restart
            timeoutSeconds: 1
            successThreshold: 1

          resources:
            requests: 
              cpu: "0.05"
              memory: 20Mi
            limits:
              cpu: "0.05"
              memory: 25Mi
          volumeMounts:
            - mountPath: "/go/pvc"
              name: goserver-volume

      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc
