configs/postgres-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-h
spec:
  selector:
    app: postgresql
  ports:
    - port: 5432
  clusterIP: None
