configs/service_loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
  - name: goserver-service
    port: 8000
    targetPort: 8000
    protocol: TCP

#
