configs/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort
  ports:
  - name: goserver-service
    port: 8000
    targetPort: 8000
    protocol: TCP
    nodePort: 30001 #30.000 between 32.767
